--- a/data/playbooks/vars/defaults.yml
+++ b/data/playbooks/vars/defaults.yml
@@ -40,7 +40,7 @@ vars_defaults:
       min_throughput_mbps: 0
   lif:
     port: e0c
-    subnet: demo-lab
+    subnet_name: demo-lab
   lun:
     size_unit: gb
   svm:  
