--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.0'
 services:
   # MySql Server
   mysqldb:
-    image: mysql:8.1
+    image: docker.io/mysql:8.1
     container_name: af_db
     restart: unless-stopped
     # load extra environment variables from file
@@ -27,7 +27,7 @@ services:
     # Only start after MySql
     depends_on:
       - mysqldb
-    image: ansibleguy/ansibleforms:latest
+    image: docker.io/ansibleguy/ansibleforms:latest
     container_name: af_app
     restart: unless-stopped
     ports:
