--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ LOG_LEVEL=info
 MYSQLDB_USER=root
 MYSQLDB_PASSWORD=AnsibleForms!123
 # the port on the host, feel free to set back to 3306
-MYSQLDB_LOCAL_PORT=3307
+MYSQLDB_LOCAL_PORT=3306
 # the port inside docker (must be 3306)
 MYSQLDB_DOCKER_PORT=3306
 
@@ -13,6 +13,15 @@ MYSQLDB_DOCKER_PORT=3306
 WEBAPP_LOCAL_PORT=443
 # the port inside the docker (can be anything), feel free to set to 443
 WEBAPP_DOCKER_PORT=443
+
+# the port on the host for the fake smtp server, feel free to set to 25
+SMTP_LOCAL_PORT=25
+# the port inside the docker (can be anything), feel free to set to 25
+SMTP_DOCKER_PORT=1025
+# the port on the host for the fake smtp server web interface, feel free to set to 80
+SMTP_WEB_LOCAL_PORT=80
+# the port inside the docker (can be anything), feel free to set to 80
+SMTP_WEB_DOCKER_PORT=1080
 # enable https ?
 HTTPS=1
 # production
