--- a/data/playbooks/roles/ontap/security_certificate/tasks/renew.yml
+++ b/data/playbooks/roles/ontap/security_certificate/tasks/renew.yml
@@ -9,7 +9,7 @@
         key_filepath: "{{ auth_rest.key_filepath | default(omit) }}"
         cert_filepath: "{{ auth_rest.cert_filepath | default(omit) }}"
         validate_certs: "{{ auth_rest_validate_certs | default(false) }}"
-        use_rest: "always"
+        use_rest: always
     no_log: true
 
   # logging
