--- a/data/playbooks/roles/ontap/volume/tasks/create.yml
+++ b/data/playbooks/roles/ontap/volume/tasks/create.yml
@@ -203,6 +203,7 @@
     when: 
     - volume_info.response.num_records > 0
     - volume.anti_ransomware_state | default(false)
+    - not ansible_check_mode
 
   # set read alloc / no rest support
   - name: "Set read-alloc [{{ volume.name }}]"
@@ -215,6 +216,7 @@
     delegate_to: localhost
     when: 
     - volume.read_realloc | default(false) 
+    - not ansible_check_mode    
 
   # set fractional reserve / no rest support
   - name: "Set fractional-reserve [{{ volume.name }}]"
@@ -227,6 +229,7 @@
     delegate_to: localhost
     when: 
     - volume.fractional_reserve | default(false) 
+    - not ansible_check_mode
 
   # set atime-update / no rest support - or bad implementation / to review in new versions
   - name: "Set atime-update [{{ volume.name }}]"
@@ -239,6 +242,7 @@
     delegate_to: localhost      
     when: 
     - volume.atime_update | default(false)
+    - not ansible_check_mode
 
     ## Create qtrees
     ## We execute create_one.yml from the qtree role
@@ -251,6 +255,7 @@
     loop: "{{ volume.qtrees | default([]) }}" 
     when: 
     - volume.qtrees | default(false)
+    
 
     ## Create luns
     ## We execute create_one.yml from the lun role
