--- a/data/forms/maf.yaml
+++ b/data/forms/maf.yaml
@@ -165,6 +165,7 @@
           maxValue: 100
 - name: Create volume from template
   type: ansible
+  check: true
   playbook: test_create_lod_volume_template.yml
   showHelp: true
   help: |
