--- a/data/playbooks/roles/eeod/logic/tasks/parse_csv.yml
+++ b/data/playbooks/roles/eeod/logic/tasks/parse_csv.yml
@@ -1,4 +1,4 @@
----
+## Naming facts
 - parse_csv:
     vars_external : "{{ vars_external }}"
   delegate_to: localhost
@@ -6,7 +6,7 @@
 
 - set_fact:
     vars_local : "{{ logic_result.vars }}"
-    qlogname : "{{ qlogname | default('',true) }}"
+    qlogname : "{{ qlogname | default('',true) }}"    
 
 - set_fact:
     qlogname: "{{ vars_external | to_nice_yaml(2) | indent(2,true) | do_log('Running logic parse_csv','vars_external',qlogname) }}"
