--- a/data/playbooks/roles/ontap/svm/tasks/main.yml
+++ b/data/playbooks/roles/ontap/svm/tasks/main.yml
@@ -8,4 +8,4 @@
 
     qtask_suffix: "{{ qsuffix | default('') }}"
     qtask_child: "{{ qchild | default('') }}"
-    name_mapping_item:
+    svm_item:
