--- a/data/playbooks/roles/ontap/qtree/tasks/facts.yml
+++ b/data/playbooks/roles/ontap/qtree/tasks/facts.yml
@@ -3,7 +3,7 @@
 - name: Merge Extravars
   ansible.builtin.set_fact:
     qtree  : "{{ 'qtree'    | merge_vars(d=vars_defaults,t=vars_templates,v=vars_local,l=qtree_item,o=vars_overrides,c=qtask_child,s=qtask_suffix) }}"
-    volume : "{{ 'volume'   | merge_vars(d=vars_defaults,t=vars_templates,v=vars_local,o=vars_overrides,c=qtask_child) }}"
+    volume : "{{ 'volume'   | merge_vars(d=vars_defaults,t=vars_templates,v=vars_local,l=volume_item,o=vars_overrides,c=qtask_child) }}"
     svm    : "{{ 'svm'      | merge_vars(d=vars_defaults,t=vars_templates,v=vars_local,o=vars_overrides,c=qtask_child) }}"
     cluster: "{{ 'cluster'  | merge_vars(d=vars_defaults,t=vars_templates,v=vars_local,o=vars_overrides,c=qtask_child) }}"
 
